syntax= "proto3";

package base_models;

option go_package = "github.com/relaunch-cot/lib-relaunch-cot/proto/base_models";

message User {
  int64 userId = 1;
  string name = 2;
  string email = 3;
  string hashedPassword = 4;
}

message Message {
  int64 messageId = 1;
  int64 chatId = 2;
  int64 senderId = 3;
  string messageContent = 4;
  string createdAt = 5;
}

message Chat {
  int64 chatId = 1;
  int64 user1_id = 2;
  int64 user2_id = 3;
  string createdAt = 4;
  int64 createdBy = 5;
}